# tricorne

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  REUSE.toml  SECURITY.md  TRADEMARK.md
.github/ISSUE_TEMPLATE/: bug_report.md  packaging_request.md
artwork/: Tricorne Logo
engage/tricorne-engage/: README.md  pyproject.toml
engage/tricorne-engage/src/tricorne_engage/: __init__.py  __main__.py  cli.py  devmode.py  log.py  models.py  paths.py  scope.py  seal.py
engage/tricorne-engage/tests/: __init__.py  test_log.py  test_scope.py  test_seal.py
selinux/tricorne-base/: tricorne.if  tricorne.te
